--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
 
+    <div id="welcome-screen">
+    <div class="welcome-content">
+        <h1>ようこそ 💙</h1>
+        <p>
+            Espero que disfrutes esta pequeña página que hice para nosotros.<br>
+            一緒にたくさん学びましょう 🌸
+        </p>
+        <button id="enter-btn">Entrar</button>
+    </div>
+</div>
+
 <div class="app-container">
 
     <!-- Header -->
